Minimise resource usage in OwnerController and Vet